frontend/test/should_pass/graph_empty_size.grg
rule r {
	if { !empty(); }
	if { size()>0; }

	modify {
		eval {
			def var x:boolean = empty();
			def var y:int = size();
		}
		
		exec({{ !empty() && size()>0}} && r);
	}
}

