frontend/test/should_fail/exectype_SetmapRem.grg
using exectype;

rule r
{
	modify  {
		exec(x:boolean=true && y:int=3 && {x.rem(y)});
	}
}